--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
+    <link rel="stylesheet" href="css/calendar.jungle-nature.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
@@ -727,6 +728,7 @@
                 <option value="into-the-night">Into the Night</option>
                 <option value="invincible-zone">Invincible Zone</option>
                 <option value="japan-emperor">Japan's Emperor</option>
+                <option value="jungle-nature">Jungle Nature</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="lemongrass-sky">Lemongrass Sky</option>
