--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
     <link rel="stylesheet" href="css/calendar.inspiration-line.css">
     <link rel="stylesheet" href="css/calendar.in-the-dusk.css">
     <link rel="stylesheet" href="css/calendar.intelligence-quotient.css">
+    <link rel="stylesheet" href="css/calendar.into-the-jungle.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
@@ -725,10 +726,10 @@
                 <option value="inspiration-line">Inspiration Line</option>
                 <option value="in-the-dusk">In the Dusk</option>
                 <option value="intelligence-quotient">Intelligence Quotient</option>
+                <option value="into-the-jungle">Into the Jungle</option>
                 <option value="into-the-night">Into the Night</option>
                 <option value="invincible-zone">Invincible Zone</option>
                 <option value="japan-emperor">Japan's Emperor</option>
-                <option value="jungle-nature">Jungle Nature</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="lemongrass-sky">Lemongrass Sky</option>
