--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.dream-adventure.css">
+    <link rel="stylesheet" href="css/calendar.eagle-swoop.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
     <link rel="stylesheet" href="css/calendar.essential-oils.css">
@@ -666,6 +667,7 @@
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
                 <option value="dream-adventure">Dream Adventure</option>
+                <option value="eagle-swoop">Eagle Swoop</option>
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
                 <option value="essential-oils">Essential Oils</option>
