--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
     <link rel="stylesheet" href="css/calendar.the-highest-level.css">
+    <link rel="stylesheet" href="css/calendar.the-last-day-of-spring.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.the-modern-developer.css">
     <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
@@ -848,6 +849,7 @@
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
                 <option value="the-highest-level">The Highest Level</option>
+                <option value="the-last-day-of-spring">The Last Day of Spring</option>
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="the-modern-developer">The Modern Developer</option>
                 <option value="the-perfect-blend">The Perfect Blend</option>
