--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/calendar.a-brilliant-mind.css">
     <link rel="stylesheet" href="css/calendar.action-time.css">
     <link rel="stylesheet" href="css/calendar.adelaide-skyline.css">
+    <link rel="stylesheet" href="css/calendar.a-desert-island.css">
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
     <link rel="stylesheet" href="css/calendar.a-forward-move.css">
     <link rel="stylesheet" href="css/calendar.a-good-idea.css">
@@ -569,6 +570,7 @@
                 <option value="a-brilliant-mind">A Brilliant Mind</option>
                 <option value="action-time">Action Time</option>
                 <option value="adelaide-skyline">Adelaide's Skyline</option>
+                <option value="a-desert-island">A Desert Island</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
                 <option value="a-forward-move">A Forward Move</option>
                 <option value="a-good-idea">A Good Idea</option>
