--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
     <link rel="stylesheet" href="css/calendar.andromeda-galaxy.css">
+    <link rel="stylesheet" href="css/calendar.antarctic-ice.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
     <link rel="stylesheet" href="css/calendar.arctic-snowfall.css">
@@ -583,6 +584,7 @@
                 <option value="amazing-opportunity">Amazing Opportunity</option>
                 <option value="amazon-river">Amazon River</option>
                 <option value="andromeda-galaxy">Andromeda Galaxy</option>
+                <option value="antarctic-ice">Antarctic Ice</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
                 <option value="arctic-glow">Arctic Glow</option>
                 <option value="arctic-snowfall">Arctic Snowfall</option>
