--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
     <link rel="stylesheet" href="css/calendar.golden-lights.css">
     <link rel="stylesheet" href="css/calendar.golden-opportunity.css">
+    <link rel="stylesheet" href="css/calendar.golden-summer.css">
     <link rel="stylesheet" href="css/calendar.grand-prix.css">
     <link rel="stylesheet" href="css/calendar.great-idea.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
@@ -707,6 +708,7 @@
                 <option value="golden-horizon">Golden Horizon</option>
                 <option value="golden-lights">Golden Lights</option>
                 <option value="golden-opportunity">Golden Opportunity</option>
+                <option value="golden-summer">Golden Summer</option>
                 <option value="grand-prix">Grand Prix</option>
                 <option value="great-idea">Great Idea</option>
                 <option value="great-lakes">Great Lakes</option>
