--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
     <link rel="stylesheet" href="css/calendar.ice-palace.css">
     <link rel="stylesheet" href="css/calendar.iceland-volcanoes.css">
     <link rel="stylesheet" href="css/calendar.imaginary-world.css">
+    <link rel="stylesheet" href="css/calendar.indigo-jeans.css">
     <link rel="stylesheet" href="css/calendar.in-my-style.css">
     <link rel="stylesheet" href="css/calendar.inspiration-line.css">
     <link rel="stylesheet" href="css/calendar.in-the-dusk.css">
@@ -733,6 +734,7 @@
                 <option value="ice-palace">Ice Palace</option>
                 <option value="iceland-volcanoes">Iceland’s Volcanoes</option>
                 <option value="imaginary-world">Imaginary World</option>
+                <option value="indigo-jeans">Indigo Jeans</option>
                 <option value="in-my-style">In My Style</option>
                 <option value="inspiration-line">Inspiration Line</option>
                 <option value="in-the-dusk">In the Dusk</option>
