--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.jungle-nature.css">
+    <link rel="stylesheet" href="css/calendar.keep-on-smiling.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
@@ -608,7 +609,7 @@
                 <option value="black-hacker">Black Hacker</option>
                 <option value="black-hawk">Black Hawk</option>
                 <option value="black-hole">Black Hole</option>
-                <option value="black-orange">Black Orange</option>
+                <option value="black-orange">Black & Orange</option>
                 <option value="black-style">Black Style</option>
                 <option value="black-velvet">Black Velvet</option>
                 <option value="black-violet">Black Violet</option>
@@ -743,6 +744,7 @@
                 <option value="into-the-night">Into the Night</option>
                 <option value="invincible-zone">Invincible Zone</option>
                 <option value="japan-emperor">Japan's Emperor</option>
+                <option value="keep-on-smiling">Keep on Smiling</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="lemongrass-sky">Lemongrass Sky</option>
