--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
     <link rel="stylesheet" href="css/calendar.rain-waltz.css">
     <link rel="stylesheet" href="css/calendar.random-coincidence.css">
+    <link rel="stylesheet" href="css/calendar.real-results.css">
     <link rel="stylesheet" href="css/calendar.red-lake.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
     <link rel="stylesheet" href="css/calendar.remote-island.css">
@@ -820,6 +821,7 @@
                 <option value="rainforest-jungle">Rainforest Jungle</option>
                 <option value="rain-waltz">Rain Waltz</option>
                 <option value="random-coincidence">Random Coincidence</option>
+                <option value="real-results">Real Results</option>
                 <option value="red-lake">Red Lake</option>
                 <option value="red-squirrel">Red Squirrel</option>
                 <option value="remote-island">Remote Island</option>
