--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <link rel="stylesheet" href="css/calendar.black-hawk.css">
     <link rel="stylesheet" href="css/calendar.black-hole.css">
     <link rel="stylesheet" href="css/calendar.black-orange.css">
-    <link rel="stylesheet" href="css/calendar.black-style.css">
+    <link rel="stylesheet" href="css/calendar.black-pear.css">
+    <link rel="stylesheet" href="css/calendar.black-rangstyle.css">
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
     <link rel="stylesheet" href="css/calendar.black-violet.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
@@ -611,6 +612,7 @@
                 <option value="black-hawk">Black Hawk</option>
                 <option value="black-hole">Black Hole</option>
                 <option value="black-orange">Black & Orange</option>
+                <option value="black-pear">Black Pear</option>
                 <option value="black-style">Black Style</option>
                 <option value="black-velvet">Black Velvet</option>
                 <option value="black-violet">Black Violet</option>
