--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
+    <link rel="stylesheet" href="css/calendar.california-sunshine.css">
     <link rel="stylesheet" href="css/calendar.camomile-flowers.css">
     <link rel="stylesheet" href="css/calendar.canary-islands.css">
     <link rel="stylesheet" href="css/calendar.candy-world.css">
@@ -634,6 +635,7 @@
                 <option value="bronze-horseman">Bronze Horseman</option>
                 <option value="cacao-plantation">Cacao Plantation</option>
                 <option value="cafe-de-colombia">Café de Colombia</option>
+                <option value="california-sunshine">California Sunshine</option>
                 <option value="camomile-flowers">Camomile Flowers</option>
                 <option value="canary-islands">Canary Islands</option>
                 <option value="candy-world">Candy World</option>
