--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <link rel="stylesheet" href="css/calendar.deep-ocean.css">
     <link rel="stylesheet" href="css/calendar.deep-space.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
+    <link rel="stylesheet" href="css/calendar.desert-water.css">
     <link rel="stylesheet" href="css/calendar.developers-zone.css">
     <link rel="stylesheet" href="css/calendar.diamond-planet.css">
     <link rel="stylesheet" href="css/calendar.digital-excellence.css">
@@ -670,6 +671,7 @@
                 <option value="deep-ocean">Deep Ocean</option>
                 <option value="deep-space">Deep Space</option>
                 <option value="desert-mirage">Desert Mirage</option>
+                <option value="desert-water">Desert Water</option>
                 <option value="developers-zone">Developers Zone</option>
                 <option value="diamond-planet">Diamond Planet</option>
                 <option value="digital-excellence">Digital Excellence</option>
