--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
     <link rel="stylesheet" href="css/calendar.deep-ocean.css">
     <link rel="stylesheet" href="css/calendar.deep-space.css">
+    <link rel="stylesheet" href="css/calendar.desert-miracle.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
     <link rel="stylesheet" href="css/calendar.desert-water.css">
     <link rel="stylesheet" href="css/calendar.developers-zone.css">
@@ -670,6 +671,7 @@
                 <option value="deep-forest">Deep Forest</option>
                 <option value="deep-ocean">Deep Ocean</option>
                 <option value="deep-space">Deep Space</option>
+                <option value="desert-miracle">Desert Miracle</option>
                 <option value="desert-mirage">Desert Mirage</option>
                 <option value="desert-water">Desert Water</option>
                 <option value="developers-zone">Developers Zone</option>
