--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <link rel="stylesheet" href="css/calendar.black-hacker.css">
     <link rel="stylesheet" href="css/calendar.black-hawk.css">
     <link rel="stylesheet" href="css/calendar.black-hole.css">
+    <link rel="stylesheet" href="css/calendar.black-mountain.css">
     <link rel="stylesheet" href="css/calendar.black-orange.css">
     <link rel="stylesheet" href="css/calendar.black-pear.css">
     <link rel="stylesheet" href="css/calendar.black-pearl.css">
@@ -616,6 +617,7 @@
                 <option value="black-hacker">Black Hacker</option>
                 <option value="black-hawk">Black Hawk</option>
                 <option value="black-hole">Black Hole</option>
+                <option value="black-mountain">Black Mountain</option>
                 <option value="black-orange">Black & Orange</option>
                 <option value="black-pear">Black Pear</option>
                 <option value="black-pearl">Black Pearl</option>
