--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
     <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
     <link rel="stylesheet" href="css/calendar.oceanfront-elegance.css">
+    <link rel="stylesheet" href="css/calendar.ocean-parkway.css">
     <link rel="stylesheet" href="css/calendar.ocean-surf.css">
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
@@ -803,6 +804,7 @@
                 <option value="north-pole">North Pole</option>
                 <option value="northern-nights">Northern Nights</option>
                 <option value="oceanfront-elegance">Oceanfront Elegance</option>
+                <option value="ocean-parkway">Ocean Parkway</option>
                 <option value="ocean-surf">Ocean Surf</option>
                 <option value="ocean-view">Ocean View</option>
                 <option value="ocean-vortex">Ocean Vortex</option>
