--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
     <link rel="stylesheet" href="css/calendar.midnight-elegance.css">
     <link rel="stylesheet" href="css/calendar.migratory-birds.css">
+    <link rel="stylesheet" href="css/calendar.modern-technology.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
     <link rel="stylesheet" href="css/calendar.morning-forest.css">
@@ -786,6 +787,7 @@
                 <option value="midnight-train">Midnight Train</option>
                 <option value="midnight-elegance">Midnight Elegance</option>
                 <option value="migratory-birds">Migratory Birds</option>
+                <option value="modern-technology">Modern Technology</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
                 <option value="moonlit-path">Moonlit Path</option>
                 <option value="morning-forest">Morning Forest</option>
