--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <link rel="stylesheet" href="css/calendar.candy-world.css">
     <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
     <link rel="stylesheet" href="css/calendar.caribbean-sea.css">
+    <link rel="stylesheet" href="css/calendar.celestial-objects.css">
     <link rel="stylesheet" href="css/calendar.centaurus-constellation.css">
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
@@ -649,6 +650,7 @@
                 <option value="candy-world">Candy World</option>
                 <option value="cardinals-guards">Cardinal's Guards</option>
                 <option value="caribbean-sea">Caribbean Sea</option>
+                <option value="celestial-objects">Celestial Objects</option>
                 <option value="centaurus-constellation">Centaurus Constellation</option>
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
