--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
     <link rel="stylesheet" href="css/calendar.level-of-comfort.css">
     <link rel="stylesheet" href="css/calendar.life-quality.css">
+    <link rel="stylesheet" href="css/calendar.like-a-bird.css">
     <link rel="stylesheet" href="css/calendar.limited-edition.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.logical-intelligence.css">
@@ -769,6 +770,7 @@
                 <option value="lemongrass-sky">Lemongrass Sky</option>
                 <option value="level-of-comfort">Level of Comfort</option>
                 <option value="life-quality">Life Quality</option>
+                <option value="like-a-bird">Like a Bird</option>
                 <option value="limited-edition">Limited Edition</option>
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="logical-intelligence">Logical Intelligence</option>
