--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
     <link rel="stylesheet" href="css/calendar.sky-eagle.css">
     <link rel="stylesheet" href="css/calendar.skylight-window.css">
+    <link rel="stylesheet" href="css/calendar.small-happiness.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
     <link rel="stylesheet" href="css/calendar.statue-of-liberty.css">
@@ -864,6 +865,7 @@
                 <option value="silicon-valley">Silicon Valley</option>
                 <option value="sky-eagle">Sky Eagle</option>
                 <option value="skylight-window">Skylight Window</option>
+                <option value="small-happiness">Small Happiness</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="statue-of-liberty">Statue of Liberty</option>
