--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <link rel="stylesheet" href="css/calendar.cosmic-nebula.css">
     <link rel="stylesheet" href="css/calendar.cosmic-perspective.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
+    <link rel="stylesheet" href="css/calendar.creative-content.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
     <link rel="stylesheet" href="css/calendar.critical-thinking.css">
     <link rel="stylesheet" href="css/calendar.crossroads-stone.css">
@@ -667,6 +668,7 @@
                 <option value="cosmic-nebula">Cosmic Nebula</option>
                 <option value="cosmic-perspective">Cosmic Perspective</option>
                 <option value="cracked-ice">Cracked Ice</option>
+                <option value="creative-content">Creative Content</option>
                 <option value="crimson-sky">Crimson Sky</option>
                 <option value="critical-thinking">Critical Thinking</option>
                 <option value="crossroads-stone">Crossroads Stone</option>
