--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-nature.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
+    <link rel="stylesheet" href="css/calendar.unforgettable-moments.css">
     <link rel="stylesheet" href="css/calendar.unseen-wonders.css">
     <link rel="stylesheet" href="css/calendar.urban-fashion.css">
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
@@ -902,6 +903,7 @@
                 <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-nature">Tropical Nature</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
+                <option value="unforgettable-moments">Unforgettable Moments</option>
                 <option value="unseen-wonders">Unseen Wonders</option>
                 <option value="urban-fashion">Urban Fashion</option>
                 <option value="velvety-dark">Velvety Dark</option>
