--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-nature.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
+    <link rel="stylesheet" href="css/calendar.twilight-garden.css">
     <link rel="stylesheet" href="css/calendar.unforgettable-moments.css">
     <link rel="stylesheet" href="css/calendar.unseen-wonders.css">
     <link rel="stylesheet" href="css/calendar.urban-fashion.css">
@@ -905,6 +906,7 @@
                 <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-nature">Tropical Nature</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
+                <option value="twilight-garden">Twilight Garden</option>
                 <option value="unforgettable-moments">Unforgettable Moments</option>
                 <option value="unseen-wonders">Unseen Wonders</option>
                 <option value="urban-fashion">Urban Fashion</option>
