--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <link rel="stylesheet" href="css/calendar.coastal-pacific.css">
     <link rel="stylesheet" href="css/calendar.coffee-for-leaders.css">
     <link rel="stylesheet" href="css/calendar.collaboration-idea.css">
+    <link rel="stylesheet" href="css/calendar.color-symphony.css">
     <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
     <link rel="stylesheet" href="css/calendar.continuous-growth.css">
     <link rel="stylesheet" href="css/calendar.coral-reef.css">
@@ -666,6 +667,7 @@
                 <option value="coastal-pacific">Coastal Pacific</option>
                 <option value="coffee-for-leaders">Coffee for Leaders</option>
                 <option value="collaboration-idea">Collaboration Idea</option>
+                <option value="color-symphony">Color Symphony</option>
                 <option value="competitive-advantage">Competitive Advantage</option>
                 <option value="continuous-growth">Continuous Growth</option>
                 <option value="coral-reef">Coral Reef</option>
