--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
     <link rel="stylesheet" href="css/calendar.green-city.css">
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
     <link rel="stylesheet" href="css/calendar.greenland-icebergs.css">
+    <link rel="stylesheet" href="css/calendar.green-light.css">
     <link rel="stylesheet" href="css/calendar.green-tea.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
     <link rel="stylesheet" href="css/calendar.guangzhou-lights.css">
@@ -748,6 +749,7 @@
                 <option value="green-city">Green City</option>
                 <option value="green-coffee">Green Coffee</option>
                 <option value="greenland-icebergs">Greenland’s Icebergs</option>
+                <option value="green-light">Green Light</option>
                 <option value="green-tea">Green Tea</option>
                 <option value="greyscale">Greyscale</option>
                 <option value="guangzhou-lights">Guangzhou Lights</option>
