--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
     <link rel="stylesheet" href="css/calendar.skylight-window.css">
     <link rel="stylesheet" href="css/calendar.small-happiness.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
+    <link rel="stylesheet" href="css/calendar.something-special.css">
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
     <link rel="stylesheet" href="css/calendar.statue-of-liberty.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
@@ -879,6 +880,7 @@
                 <option value="skylight-window">Skylight Window</option>
                 <option value="small-happiness">Small Happiness</option>
                 <option value="solar-flare">Solar Flare</option>
+                <option value="something-special">Something Special</option>
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="statue-of-liberty">Statue of Liberty</option>
                 <option value="steel-shadows">Steel Shadows</option>
