--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
     <link rel="stylesheet" href="css/calendar.luxury-design.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
+    <link rel="stylesheet" href="css/calendar.magic-colors.css">
     <link rel="stylesheet" href="css/calendar.magic-fly.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
@@ -794,6 +795,7 @@
                 <option value="luxury-design">Luxury Design</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
                 <option value="magellanic-penguin">Magellanic Penguin</option>
+                <option value="magic-colors">Magic Colors</option>
                 <option value="magic-fly">Magic Fly</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
