--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <link rel="stylesheet" href="css/calendar.doterra-colors.css">
     <link rel="stylesheet" href="css/calendar.doterra-gold.css">
     <link rel="stylesheet" href="css/calendar.doterra-green.css">
+    <link rel="stylesheet" href="css/calendar.doterra-magic.css">
     <link rel="stylesheet" href="css/calendar.doterra-new.css">
     <link rel="stylesheet" href="css/calendar.doterra-power.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
@@ -707,6 +708,7 @@
                 <option value="doterra-colors">DōTERRA Colors</option>
                 <option value="doterra-gold">DōTERRA Gold</option>
                 <option value="doterra-green">DōTERRA Green</option>
+                <option value="doterra-magic">DōTERRA Magic</option>
                 <option value="doterra-new">DōTERRA New</option>
                 <option value="doterra-power">DōTERRA Power</option>
                 <option value="dragon-flame">Dragon Flame</option>
