--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
     <link rel="stylesheet" href="css/calendar.the-modern-developer.css">
     <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
     <link rel="stylesheet" href="css/calendar.the-spirit-of-innovation.css">
+    <link rel="stylesheet" href="css/calendar.the-unstoppable-mindset.css">
     <link rel="stylesheet" href="css/calendar.the-west-coast.css">
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
@@ -913,6 +914,7 @@
                 <option value="the-perfect-blend">The Perfect Blend</option>
                 <option value="samurai-path">The Samurai's Path</option>
                 <option value="the-spirit-of-innovation">The Spirit of Innovation</option>
+                <option value="the-unstoppable-mindset">The Unstoppable Mindset</option>
                 <option value="the-west-coast">The West Coast</option>
                 <option value="time-complexity">Time Complexity</option>
                 <option value="time-machine">Time Machine</option>
