--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
+    <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
@@ -904,6 +905,7 @@
                 <option value="tactical-command">Tactical Command</option>
                 <option value="technological-might">Technological Might</option>
                 <option value="the-best-of-fashion">The Best of Fashion</option>
+                <option value="the-black-spruce">The Black Spruce</option>
                 <option value="the-dead-sea">The Dead Sea</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
