--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
     <link rel="stylesheet" href="css/calendar.desert-water.css">
     <link rel="stylesheet" href="css/calendar.developers-zone.css">
     <link rel="stylesheet" href="css/calendar.diamond-planet.css">
+    <link rel="stylesheet" href="css/calendar.different-perspective.css">
     <link rel="stylesheet" href="css/calendar.digital-excellence.css">
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
@@ -703,6 +704,7 @@
                 <option value="desert-water">Desert Water</option>
                 <option value="developers-zone">Developers Zone</option>
                 <option value="diamond-planet">Diamond Planet</option>
+                <option value="different-perspective">Different Perspective</option>
                 <option value="digital-excellence">Digital Excellence</option>
                 <option value="divi-divi-trees">Divi-divi Trees</option>
                 <option value="distant-skies">Distant Skies</option>
