--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
     <link rel="stylesheet" href="css/calendar.intelligence-quotient.css">
     <link rel="stylesheet" href="css/calendar.into-the-jungle.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
+    <link rel="stylesheet" href="css/calendar.island-breeze.css">
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.jungle-nature.css">
@@ -784,6 +785,7 @@
                 <option value="intelligence-quotient">Intelligence Quotient</option>
                 <option value="into-the-jungle">Into the Jungle</option>
                 <option value="into-the-night">Into the Night</option>
+                <option value="island-breeze">Island Breeze</option>
                 <option value="invincible-zone">Invincible Zone</option>
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="keep-on-smiling">Keep on Smiling</option>
