--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
     <link rel="stylesheet" href="css/calendar.mediterranean-dreams.css">
     <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
     <link rel="stylesheet" href="css/calendar.midnight-alchemy.css">
+    <link rel="stylesheet" href="css/calendar.midnight-black.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
     <link rel="stylesheet" href="css/calendar.midnight-elegance.css">
     <link rel="stylesheet" href="css/calendar.migratory-birds.css">
@@ -813,6 +814,7 @@
                 <option value="mediterranean-dreams">Mediterranean Dreams</option>
                 <option value="melting-glaciers">Melting Glaciers</option>
                 <option value="midnight-alchemy">Midnight Alchemy</option>
+                <option value="midnight-black">Midnight Black</option>
                 <option value="midnight-train">Midnight Train</option>
                 <option value="midnight-elegance">Midnight Elegance</option>
                 <option value="migratory-birds">Migratory Birds</option>
