--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
     <link rel="stylesheet" href="css/calendar.new-ai.css">
     <link rel="stylesheet" href="css/calendar.new-black.css">
+    <link rel="stylesheet" href="css/calendar.new-millenium.css">
     <link rel="stylesheet" href="css/calendar.new-style.css">
     <link rel="stylesheet" href="css/calendar.next-step.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
@@ -828,9 +829,9 @@
                 <option value="mount-fuji">Mount Fuji</option>
                 <option value="neon-nights">Neon Nights</option>
                 <option value="new-ai">New AI</option>
-                <option value="new-style">New Style</option>
-                <option value="new-black">New Black</option>
+                <option value="new-millenium">New Millenium</option>
                 <option value="next-step">Next Step</option>
+                <option value="new-style">New Style</option>
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="night-dragon">Night Dragon</option>
                 <option value="night-sky">Night Sky</option>
