--- a/index.html
+++ b/index.html
@@ -328,9 +328,10 @@
     <link rel="stylesheet" href="css/calendar.success-story.css">
     <link rel="stylesheet" href="css/calendar.sweet-misty-morning.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
+    <link rel="stylesheet" href="css/calendar.technological-future.css">
+    <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
-    <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
@@ -908,9 +909,10 @@
                 <option value="success-story">Success Story</option>
                 <option value="sweet-misty-morning">Sweet Misty Morning</option>
                 <option value="sword-of-fate">Sword of Fate</option>
+                <option value="technological-future">Technological Future</option>
+                <option value="technological-might">Technological Might</option>
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
-                <option value="technological-might">Technological Might</option>
                 <option value="the-best-of-fashion">The Best of Fashion</option>
                 <option value="the-black-spruce">The Black Spruce</option>
                 <option value="the-dead-sea">The Dead Sea</option>
