--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.the-modern-developer.css">
     <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
+    <link rel="stylesheet" href="css/calendar.the-silver-sword.css">
     <link rel="stylesheet" href="css/calendar.the-spirit-of-innovation.css">
     <link rel="stylesheet" href="css/calendar.the-unstoppable-mindset.css">
     <link rel="stylesheet" href="css/calendar.the-west-coast.css">
@@ -926,6 +927,7 @@
                 <option value="the-modern-developer">The Modern Developer</option>
                 <option value="the-perfect-blend">The Perfect Blend</option>
                 <option value="samurai-path">The Samurai's Path</option>
+                <option value="the-silver-sword">The Silver Sword</option>
                 <option value="the-spirit-of-innovation">The Spirit of Innovation</option>
                 <option value="the-unstoppable-mindset">The Unstoppable Mindset</option>
                 <option value="the-west-coast">The West Coast</option>
