--- a/index.html
+++ b/index.html
@@ -255,8 +255,9 @@
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     <link rel="stylesheet" href="css/calendar.night-dragon.css">
     <link rel="stylesheet" href="css/calendar.night-sky.css">
-    <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
+    <link rel="stylesheet" href="css/calendar.north-pole.css">
+    <link rel="stylesheet" href="css/calendar.north-pole-icebreaker.css">
     <link rel="stylesheet" href="css/calendar.oceanfront-elegance.css">
     <link rel="stylesheet" href="css/calendar.ocean-parkway.css">
     <link rel="stylesheet" href="css/calendar.ocean-surf.css">
@@ -839,8 +840,9 @@
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="night-dragon">Night Dragon</option>
                 <option value="night-sky">Night Sky</option>
-                <option value="north-pole">North Pole</option>
                 <option value="northern-nights">Northern Nights</option>
+                <option value="north-pole">North Pole</option>
+                <option value="north-pole-icebreaker">North Pole Icebreaker</option>
                 <option value="oceanfront-elegance">Oceanfront Elegance</option>
                 <option value="ocean-parkway">Ocean Parkway</option>
                 <option value="ocean-surf">Ocean Surf</option>
