--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
     <link rel="stylesheet" href="css/calendar.deep-ocean.css">
     <link rel="stylesheet" href="css/calendar.deep-space.css">
+    <link rel="stylesheet" href="css/calendar.desert-between-us.css">
     <link rel="stylesheet" href="css/calendar.desert-miracle.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
     <link rel="stylesheet" href="css/calendar.desert-water.css">
@@ -707,6 +708,7 @@
                 <option value="deep-forest">Deep Forest</option>
                 <option value="deep-ocean">Deep Ocean</option>
                 <option value="deep-space">Deep Space</option>
+                <option value="desert-between-us">Desert Between Us</option>
                 <option value="desert-miracle">Desert Miracle</option>
                 <option value="desert-mirage">Desert Mirage</option>
                 <option value="desert-water">Desert Water</option>
