--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
+    <link rel="stylesheet" href="css/calendar.lemon-lime.css">
     <link rel="stylesheet" href="css/calendar.level-of-comfort.css">
     <link rel="stylesheet" href="css/calendar.life-quality.css">
     <link rel="stylesheet" href="css/calendar.like-a-bird.css">
@@ -801,6 +802,7 @@
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="lemongrass-sky">Lemongrass Sky</option>
+                <option value="lemon-lime">Lemon Lime</option>
                 <option value="level-of-comfort">Level of Comfort</option>
                 <option value="life-quality">Life Quality</option>
                 <option value="like-a-bird">Like a Bird</option>
