--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.something-special.css">
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
+    <link rel="stylesheet" href="css/calendar.spring-silence.css">
     <link rel="stylesheet" href="css/calendar.statue-of-liberty.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
@@ -906,6 +907,7 @@
                 <option value="solar-flare">Solar Flare</option>
                 <option value="something-special">Something Special</option>
                 <option value="spring-meadow">Spring Meadow</option>
+                <option value="spring-silence">Spring Silence</option>
                 <option value="statue-of-liberty">Statue of Liberty</option>
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="stockholm-roofs">Stockholm Roofs</option>
