--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
     <link rel="stylesheet" href="css/calendar.the-highest-level.css">
     <link rel="stylesheet" href="css/calendar.the-last-day-of-spring.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
+    <link rel="stylesheet" href="css/calendar.the-last-paradise.css">
     <link rel="stylesheet" href="css/calendar.the-modern-developer.css">
     <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
     <link rel="stylesheet" href="css/calendar.the-silver-sword.css">
@@ -932,6 +933,7 @@
                 <option value="the-highest-level">The Highest Level</option>
                 <option value="the-last-day-of-spring">The Last Day of Spring</option>
                 <option value="the-last-mohican">The Last Mohican</option>
+                <option value="the-last-paradise">The Last Paradise</option>
                 <option value="the-modern-developer">The Modern Developer</option>
                 <option value="the-perfect-blend">The Perfect Blend</option>
                 <option value="samurai-path">The Samurai's Path</option>
