--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
     <link rel="stylesheet" href="css/calendar.medieval-knights.css">
     <link rel="stylesheet" href="css/calendar.mediterranean-dreams.css">
     <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
+    <link rel="stylesheet" href="css/calendar.microtactic-environment.css">
     <link rel="stylesheet" href="css/calendar.midnight-alchemy.css">
     <link rel="stylesheet" href="css/calendar.midnight-black.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
@@ -825,6 +826,7 @@
                 <option value="medieval-knights">Medieval Knights</option>
                 <option value="mediterranean-dreams">Mediterranean Dreams</option>
                 <option value="melting-glaciers">Melting Glaciers</option>
+                <option value="microtactic-environment">Microtactic Environment</option>
                 <option value="midnight-alchemy">Midnight Alchemy</option>
                 <option value="midnight-black">Midnight Black</option>
                 <option value="midnight-train">Midnight Train</option>
