--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <link rel="stylesheet" href="css/calendar.breaking-point.css">
     <link rel="stylesheet" href="css/calendar.breathtaking-view.css">
     <link rel="stylesheet" href="css/calendar.bright-line.css">
+    <link rel="stylesheet" href="css/calendar.brilliant-white.css">
     <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
@@ -672,6 +673,7 @@
                 <option value="breaking-point">Breaking Point</option>
                 <option value="breathtaking-view">Breathtaking View</option>
                 <option value="bright-line">Bright Line</option>
+                <option value="brilliant-white">Brilliant White</option>
                 <option value="bronze-horseman">Bronze Horseman</option>
                 <option value="cacao-plantation">Cacao Plantation</option>
                 <option value="cafe-de-colombia">Café de Colombia</option>
