--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
+    <link rel="stylesheet" href="css/calendar.the-element-of-surprise.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
     <link rel="stylesheet" href="css/calendar.the-highest-level.css">
@@ -936,6 +937,7 @@
                 <option value="the-best-of-fashion">The Best of Fashion</option>
                 <option value="the-black-spruce">The Black Spruce</option>
                 <option value="the-dead-sea">The Dead Sea</option>
+                <option value="the-element-of-surprise">The Element of Surprise</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
                 <option value="the-highest-level">The Highest Level</option>
