--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
     <link rel="stylesheet" href="css/calendar.the-spirit-of-innovation.css">
     <link rel="stylesheet" href="css/calendar.the-unstoppable-mindset.css">
     <link rel="stylesheet" href="css/calendar.the-west-coast.css">
+    <link rel="stylesheet" href="css/calendar.tide-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
@@ -951,6 +952,7 @@
                 <option value="the-spirit-of-innovation">The Spirit of Innovation</option>
                 <option value="the-unstoppable-mindset">The Unstoppable Mindset</option>
                 <option value="the-west-coast">The West Coast</option>
+                <option value="tide-of-dreams">Tide of Dreams</option>
                 <option value="time-complexity">Time Complexity</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="tokyo-at-night">Tokyo at Night</option>
