--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
     <link rel="stylesheet" href="css/calendar.statue-of-liberty.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
+    <link rel="stylesheet" href="css/calendar.straight-to-the-point.css">
     <link rel="stylesheet" href="css/calendar.strategic-advantage.css">
     <link rel="stylesheet" href="css/calendar.strategic-planning.css">
     <link rel="stylesheet" href="css/calendar.strawberry-moon.css">
@@ -922,6 +923,7 @@
                 <option value="statue-of-liberty">Statue of Liberty</option>
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="stockholm-roofs">Stockholm Roofs</option>
+                <option value="straight-to-the-point">Straight to the Point</option>
                 <option value="strategic-advantage">Strategic Advantage</option>
                 <option value="strategic-planning">Strategic Planning</option>
                 <option value="strawberry-moon">Strawberry Moon</option>
