--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
     <link rel="stylesheet" href="css/calendar.blue-white.css">
     <link rel="stylesheet" href="css/calendar.blue-window.css">
+    <link rel="stylesheet" href="css/calendar.bold-vision.css">
     <link rel="stylesheet" href="css/calendar.breaking-point.css">
     <link rel="stylesheet" href="css/calendar.breathtaking-view.css">
     <link rel="stylesheet" href="css/calendar.bright-line.css">
@@ -674,6 +675,7 @@
                 <option value="blue-whale">Blue Whale</option>
                 <option value="blue-white">Blue & White</option>
                 <option value="blue-window">Blue Window</option>
+                <option value="bold-vision">Bold Vision</option>
                 <option value="breaking-point">Breaking Point</option>
                 <option value="breathtaking-view">Breathtaking View</option>
                 <option value="bright-line">Bright Line</option>
