--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.city-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.city-of-night.css">
+    <link rel="stylesheet" href="css/calendar.clean-code.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
     <link rel="stylesheet" href="css/calendar.coastal-pacific.css">
     <link rel="stylesheet" href="css/calendar.coffee-for-leaders.css">
@@ -696,6 +697,7 @@
                 <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="city-of-dreams">City of Dreams</option>
                 <option value="city-of-night">City of Night</option>
+                <option value="clean-code">Clean Code</option>
                 <option value="clean-energy">Clean Energy</option>
                 <option value="coastal-pacific">Coastal Pacific</option>
                 <option value="coffee-for-leaders">Coffee for Leaders</option>
