--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-nature.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
+    <link rel="stylesheet" href="css/calendar.turquoise-frontier.css">
     <link rel="stylesheet" href="css/calendar.twilight-garden.css">
     <link rel="stylesheet" href="css/calendar.unforgettable-moments.css">
     <link rel="stylesheet" href="css/calendar.unseen-wonders.css">
@@ -965,6 +966,7 @@
                 <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-nature">Tropical Nature</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
+                <option value="turquoise-frontier">Turquoise Frontier</option>
                 <option value="twilight-garden">Twilight Garden</option>
                 <option value="unforgettable-moments">Unforgettable Moments</option>
                 <option value="unseen-wonders">Unseen Wonders</option>
