--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
     <link rel="stylesheet" href="css/calendar.spring-silence.css">
     <link rel="stylesheet" href="css/calendar.statue-of-liberty.css">
+    <link rel="stylesheet" href="css/calendar.stay-cool.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
     <link rel="stylesheet" href="css/calendar.straight-to-the-point.css">
@@ -926,6 +927,7 @@
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="spring-silence">Spring Silence</option>
                 <option value="statue-of-liberty">Statue of Liberty</option>
+                <option value="stay-cool">Stay Cool</option>
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="stockholm-roofs">Stockholm Roofs</option>
                 <option value="straight-to-the-point">Straight to the Point</option>
