--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
     <link rel="stylesheet" href="css/calendar.full-pink-moon.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
+    <link rel="stylesheet" href="css/calendar.game-changer.css">
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
     <link rel="stylesheet" href="css/calendar.glorious-day.css">
@@ -770,6 +771,7 @@
                 <option value="frozen-wilderness">Frozen Wilderness</option>
                 <option value="full-pink-moon">Full Pink Moon</option>
                 <option value="galactic-glow">Galactic Glow</option>
+                <option value="game-changer">Game Changer</option>
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="giant-petrel">Giant Petrel</option>
                 <option value="glorious-day">Glorious Day</option>
