--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/calendar.a-forward-move.css">
     <link rel="stylesheet" href="css/calendar.a-good-idea.css">
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
+    <link rel="stylesheet" href="css/calendar.alone-in-paradise.css">
     <link rel="stylesheet" href="css/calendar.a-lovely-day.css">
     <link rel="stylesheet" href="css/calendar.alpha-centauri.css">
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
@@ -632,6 +633,7 @@
                 <option value="a-forward-move">A Forward Move</option>
                 <option value="a-good-idea">A Good Idea</option>
                 <option value="aloe-vera">Aloe Vera</option>
+                <option value="alone-in-paradise">Alone in Paradise</option>
                 <option value="a-lovely-day">A Lovely Day</option>
                 <option value="alpha-centauri">Alpha Centauri</option>
                 <option value="alpine-landscape">Alpine Landscape</option>
