--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
     <link rel="stylesheet" href="css/calendar.wonderful-experience.css">
+    <link rel="stylesheet" href="css/calendar.world-champion.css">
     <link rel="stylesheet" href="css/calendar.zodiac-constellations.css">
 
     <!-- Custom Styles -->
@@ -990,6 +991,7 @@
                 <option value="wild-wonders">Wild Wonders</option>
                 <option value="winter-wonderland">Winter Wonderland</option>
                 <option value="wonderful-experience">Wonderful Experience</option>
+                <option value="world-champion">World Champion</option>
                 <option value="zodiac-constellations">Zodiac Constellations</option>
             </select>
         </div>
