--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="css/calendar.amazing-opportunity.css">
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
+    <link rel="stylesheet" href="css/calendar.american-dream.css">
     <link rel="stylesheet" href="css/calendar.andromeda-galaxy.css">
     <link rel="stylesheet" href="css/calendar.antarctic-ice.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
@@ -641,6 +642,7 @@
                 <option value="amazon-dolphin">Amazon Dolphin</option>
                 <option value="amazing-opportunity">Amazing Opportunity</option>
                 <option value="amazon-river">Amazon River</option>
+                <option value="american-dream">American Dream</option>
                 <option value="andromeda-galaxy">Andromeda Galaxy</option>
                 <option value="antarctic-ice">Antarctic Ice</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
