--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
     <link rel="stylesheet" href="css/calendar.the-element-of-surprise.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
+    <link rel="stylesheet" href="css/calendar.the-hidden-jem.css">
     <link rel="stylesheet" href="css/calendar.the-highest-level.css">
     <link rel="stylesheet" href="css/calendar.the-last-day-of-spring.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
@@ -959,6 +960,7 @@
                 <option value="the-element-of-surprise">The Element of Surprise</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
+                <option value="the-hidden-jem">The Hidden Jem</option>
                 <option value="the-highest-level">The Highest Level</option>
                 <option value="the-last-day-of-spring">The Last Day of Spring</option>
                 <option value="the-last-mohican">The Last Mohican</option>
